--- a/app/src/main/res/layout/test_rec.xml
+++ b/app/src/main/res/layout/test_rec.xml
@@ -14,38 +14,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
-            android:id="@+id/btn_change"
-            android:text="更换"
+            android:id="@+id/btn_change_grid"
+            android:text="Grid"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/btn_remove"
-            android:text="删除"
+            android:id="@+id/btn_change_linear"
+            android:text="Linear"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/btn_add"
-            android:text="添加"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/btn_clear"
-            android:text="清空"
+            android:id="@+id/btn_add_divider"
+            android:text="添加分割线"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
+
         <Button
-            android:id="@+id/btn_setting"
-            android:text="设置"
+            android:id="@+id/btn_delete_divider"
+            android:text="删除分割线"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
+
+
 
     </LinearLayout>
 </LinearLayout>
