--- a/app/src/main/res/layout/vm_head.xml
+++ b/app/src/main/res/layout/vm_head.xml
@@ -4,9 +4,10 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="60dp"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/test"
             android:textColor="@color/white"
             android:background="@color/black"
             android:gravity="center"
