分组moudule分割线

--- a/app/src/main/res/layout/vm_child.xml
+++ b/app/src/main/res/layout/vm_child.xml
@@ -5,7 +5,7 @@
 
 
     <TextView
-
+        android:background="@color/white"
         android:id="@+id/tv_text"
         android:gravity="center"
         android:textSize="16sp"
