--- a/app/src/main/res/layout/test_rec.xml
+++ b/app/src/main/res/layout/test_rec.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -17,11 +18,11 @@
         android:id="@+id/tv_text"
         android:padding="10dp"
         android:gravity="center_vertical"
-        android:text="测试"
+        tools:text="测试"
         android:textColor="@color/white"
         android:background="@color/black"
         android:layout_width="match_parent"
-        android:layout_height="60dp"/>
+        android:layout_height="50dp"/>
 
     <LinearLayout
         android:visibility="gone"
