--- a/app/src/main/res/layout/vm_group_top.xml
+++ b/app/src/main/res/layout/vm_group_top.xml
@@ -9,6 +9,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/text_parent"
         android:background="#ff3000"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
@@ -18,7 +19,7 @@
             android:id="@+id/text"
             android:gravity="center_vertical"
             android:textSize="16sp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             tools:text="测试"
             android:padding="10dp"
             android:layout_width="0dp"
