--- a/app/src/main/res/layout/vh_friend_top.xml
+++ b/app/src/main/res/layout/vh_friend_top.xml
@@ -10,6 +10,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:paddingBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -38,11 +39,13 @@
 
 
         <TextView
+            android:visibility="@{data.content!=null}"
+            tools:visibility="gone"
+            android:layout_marginTop="5dp"
             android:text="@{data.content}"
             android:id="@+id/tv_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_marginRight="15dp"
             app:layout_constraintLeft_toLeftOf="@+id/tv_nickname"
             app:layout_constraintRight_toRightOf="parent"
@@ -50,14 +53,16 @@
             tools:text="朋友圈内容" />
 
         <LinearLayout
+            android:layout_marginRight="15dp"
+            android:id="@+id/ll_link"
             android:visibility="@{data.link!=null}"
             android:gravity="center_vertical"
             android:padding="5dp"
             android:background="#f2f2f2"
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_content"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_content"
-            app:layout_constraintRight_toRightOf="@+id/tv_content"
+            app:layout_constraintLeft_toLeftOf="@+id/tv_nickname"
+            app:layout_constraintRight_toRightOf="parent"
             android:layout_width="0dp"
             android:layout_height="wrap_content">
             <ImageView
