--- a/app/src/main/res/layout/vh_frined_bottom1.xml
+++ b/app/src/main/res/layout/vh_frined_bottom1.xml
@@ -3,18 +3,24 @@
 
 
     <LinearLayout
+        android:layout_marginTop="5dp"
+        android:paddingLeft="70dp"
+        android:paddingRight="15dp"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:textSize="12sp"
             android:layout_weight="1"
             android:text="10天前"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
         <ImageButton
+            android:scaleType="centerCrop"
+            android:background="@color/transparent"
             android:src="@mipmap/icon_more"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="20dp"
+            android:layout_height="20dp"/>
     </LinearLayout>
 </layout>
